--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,18 @@
 html,
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  margin: 0;
+  font-family: "Rajdhani", sans-serif;
+  padding: 0;
+  border: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .container {
   margin: 80px auto 0 auto;
   max-width: 1200px;
+}
+
+.nav-container {
+  margin: auto;
 }
